добавил миграцию изображений в S3 и обновление url в базе данных