@@ -1,19 +1,19 @@
 package com.baganov.pizzanat.service;
 
-import com.baganov.pizzanat.model.dto.product.ProductDTO;
-import com.baganov.pizzanat.model.entity.Product;
-import com.baganov.pizzanat.repository.CategoryRepository;
+import com.baganov.pizzanat.dto.ProductDto;
+import com.baganov.pizzanat.entity.Product;
+import com.baganov.pizzanat.mapper.ProductMapper;
 import com.baganov.pizzanat.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.cache.annotation.Cacheable;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -22,68 +22,52 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final CategoryRepository categoryRepository;
-    private final StorageService storageService;
+    private final ProductMapper productMapper;
+    private final S3Service s3Service;
+
+    private static final String PRODUCTS_FOLDER = "products";
+
+    @Transactional
+    public ProductDto createProduct(ProductDto productDto, MultipartFile image) {
+        String imageUrl = s3Service.uploadImage(image, PRODUCTS_FOLDER);
+        productDto.setImageUrl(imageUrl);
+
+        Product product = productMapper.toEntity(productDto);
+        Product savedProduct = productRepository.save(product);
+        return productMapper.toDto(savedProduct);
+    }
 
     @Cacheable(value = "products", key = "'product:' + #id")
-    @Transactional(readOnly = true)
-    public ProductDTO getProductById(Integer id) {
-        Product product = productRepository.findByIdWithCategory(id)
+    public ProductDto getProductById(Integer id) {
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Продукт не найден с ID: " + id));
-        return mapToDTO(product);
+        return productMapper.toDto(product);
     }
 
-    @Transactional(readOnly = true)
-    public Page<ProductDTO> getAllProducts(Pageable pageable) {
-        return productRepository.findAllByIsAvailableTrue(pageable)
-                .map(this::mapToDTO);
+    public Page<ProductDto> getAllProducts(Pageable pageable) {
+        return productRepository.findAll(pageable)
+                .map(productMapper::toDto);
     }
 
-    @Transactional(readOnly = true)
-    public Page<ProductDTO> getProductsByCategory(Integer categoryId, Pageable pageable) {
-        return productRepository.findByCategoryIdAndIsAvailableTrue(categoryId, pageable)
-                .map(this::mapToDTO);
+    public Page<ProductDto> getProductsByCategory(Integer categoryId, Pageable pageable) {
+        return productRepository.findByCategoryId(categoryId, pageable)
+                .map(productMapper::toDto);
     }
 
     @Cacheable(value = "products", key = "'products:special'")
-    @Transactional(readOnly = true)
-    public List<ProductDTO> getSpecialOffers() {
-        return productRepository.findTop8ByIsAvailableTrueAndIsSpecialOfferTrueOrderByIdDesc()
+    public List<ProductDto> getSpecialOffers() {
+        return productRepository.findByIsSpecialOfferTrue()
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(productMapper::toDto)
+                .toList();
     }
 
-    @Transactional(readOnly = true)
-    public Page<ProductDTO> searchProducts(String query, Integer categoryId, Pageable pageable) {
-        return productRepository.searchProducts(categoryId, query, pageable)
-                .map(this::mapToDTO);
-    }
-
-    private ProductDTO mapToDTO(Product product) {
-        String imageUrlWithPresignedUrl = null;
-        if (product.getImageUrl() != null && !product.getImageUrl().isEmpty()) {
-            try {
-                imageUrlWithPresignedUrl = storageService.getPresignedUrl(product.getImageUrl(), 3600);
-            } catch (Exception e) {
-                log.error("Failed to generate presigned URL for product image: {}", product.getImageUrl(), e);
-                imageUrlWithPresignedUrl = product.getImageUrl();
-            }
+    public Page<ProductDto> searchProducts(String query, Integer categoryId, Pageable pageable) {
+        if (categoryId != null) {
+            return productRepository.findByCategoryIdAndNameContainingIgnoreCase(categoryId, query, pageable)
+                    .map(productMapper::toDto);
         }
-
-        return ProductDTO.builder()
-                .id(product.getId())
-                .name(product.getName())
-                .description(product.getDescription())
-                .price(product.getPrice())
-                .discountedPrice(product.getDiscountedPrice())
-                .categoryId(product.getCategory() != null ? product.getCategory().getId() : null)
-                .categoryName(product.getCategory() != null ? product.getCategory().getName() : null)
-                .imageUrl(imageUrlWithPresignedUrl)
-                .weight(product.getWeight())
-                .isAvailable(product.isAvailable())
-                .isSpecialOffer(product.isSpecialOffer())
-                .discountPercent(product.getDiscountPercent())
-                .build();
+        return productRepository.findByNameContainingIgnoreCase(query, pageable)
+                .map(productMapper::toDto);
     }
 }
